--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "typescript": "^5",
     "ai": "^3.0.19",
     "@ai-sdk/google": "^0.0.14",
     "next": "14.1.0",
