--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "ai": "^3.0.19",
-    "@ai-sdk/google": "^0.0.14",
-    "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "zod": "^3.22.4",
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "ai": "^3.1.14",
+    "@ai-sdk/google": "^0.0.25",
+    "next": "14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0"
   }
 }
